<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogeoUsuario"
    android:background="@drawable/background_logueo_usuario">

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="@dimen/boton_horizontal_grande"
        android:hint="@string/email"
        android:id="@+id/et_usuario_logeo_usuario"
        android:drawableStart="@drawable/ic_usuario_logueo"
        android:textColorHint="@color/colorBlanco"
        android:textColor="@color/colorBlanco"
        android:background="@drawable/background_edittext_logueo"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/boton_horizontal_grande"
        android:layout_below="@+id/et_usuario_logeo_usuario"
        android:hint="@string/contrase_a"
        android:id="@+id/et_contrasenia_logeo_usuario"
        android:drawableStart="@drawable/ic_contrasenia_logueo_usuario"
        android:background="@drawable/background_edittext_logueo"
        android:textColor="@color/colorBlanco"
        android:textColorHint="@color/colorBlanco"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesi_n"
        android:layout_marginHorizontal="@dimen/boton_horizontal_grande"
        android:layout_below="@+id/et_contrasenia_logeo_usuario"
        android:layout_marginTop="60dp"
        android:id="@+id/bt_iniciar_sesion_logeo_usuario"
        android:background="@drawable/boton_circular_fucsia"
        android:textColor="@color/colorBlanco"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse_aqu"
        android:layout_marginHorizontal="@dimen/boton_horizontal_grande"
        android:layout_below="@+id/bt_iniciar_sesion_logeo_usuario"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorBlanco"
        android:id="@+id/bt_registrar_logeo_usuario"
        android:background="@android:color/transparent"
        />
</RelativeLayout>